--- a/UserService/appsettings.Local.json
+++ b/UserService/appsettings.Local.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "S3BucketName": "your-development-s3-bucket-name",
-  "AccessKey": "your-development-access-key",
-  "SecretKey": "your-development-secret-key",
+  "AWSAccessKey": "your-development-access-key",
+  "AWSSecretKey": "your-development-secret-key",
+  "SecretKey": "3b4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0",
   "DbConnectionString": "Server=localhost;Database=llp-dev;Uid=root;Pwd=password;"
 }
