--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "S3BucketName": "your-dev-s3-bucket-name",
-  "AccessKey": "your-dev-access-key",
-  "SecretKey": "your-dev-secret-key",
+  "AWSAccessKey": "your-dev-access-key",
+  "AWSSecretKey": "3b4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0",
   "DbConnectionString": "your-dev-db-connection-string"
 }
