--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: change directory
-      run: cd UserService
+      run: cd ./UserService
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
