--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+     run:
+      working-directory: $GITHUB_WORKSPACE/UserService/
 
     steps:
     - uses: actions/checkout@v4
@@ -20,8 +23,6 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-    - name: change directory
-      run: cd ./UserService
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
