--- a/UserService/appsettings.Development.json
+++ b/UserService/appsettings.Development.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "S3BucketName": "your-development-s3-bucket-name",
   "AWSAccessKey": "your-development-access-key",
-  "AWSSecretKey": "3b4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0",
-  "DbConnectionString": "your-development-db-connection-string"
+  "SecretKey": "3b4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0",
+  "DbConnectionString": "Server=llp-dev.cz8uu4qcao41.ap-south-1.rds.amazonaws.com;Database=LanguageLearningPlatform;Uid=admin;Pwd=password;"
 }
