--- a/UserService/appsettings.Local.json
+++ b/UserService/appsettings.Local.json
@@ -10,5 +10,5 @@
   "AWSAccessKey": "your-development-access-key",
   "AWSSecretKey": "your-development-secret-key",
   "SecretKey": "3b4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0",
-  "DbConnectionString": "Server=localhost;Database=llp-dev;Uid=root;Pwd=password;"
+  "DbConnectionString": ""Server=localhost;Database=llp-dev;Uid=root;Pwd=password;"
 }
